# bbcp2

./: .gitignore  CMakeLists.txt  Cargo.toml  MakeSname  README.md
src/: Makefile  bbcp.cpp  bbcp_A32.h  bbcp_A32_zlib.h  bbcp_Args.C  bbcp_Args.cpp  bbcp_Args.h  bbcp_BuffPool.C  bbcp_BuffPool.cpp  bbcp_BuffPool.h  bbcp_C32.C  bbcp_C32.h  bbcp_ChkSum.C  bbcp_ChkSum.cpp  bbcp_ChkSum.h  bbcp_Config.C  bbcp_Config.cpp  bbcp_Config.h  bbcp_Debug.h  bbcp_Emsg.C  bbcp_Emsg.cpp  bbcp_Emsg.h  bbcp_Endian.h  bbcp_FS_Null.cpp  bbcp_FS_Null.h  bbcp_FS_Pipe.C  bbcp_FS_Pipe.cpp  bbcp_FS_Pipe.h  bbcp_FS_Unix.C  bbcp_FS_Unix.cpp  bbcp_FS_Unix.h  bbcp_File.C  bbcp_File.cpp  bbcp_File.h  bbcp_FileSpec.C  bbcp_FileSpec.cpp  bbcp_FileSpec.h  bbcp_FileSystem.cpp  bbcp_FileSystem.h  bbcp_Headers.h  (+60 more)
utils/: bbcp.spec
